// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management index page designs renders error 1`] = `
<div
  class="gl-mt-4"
  data-testid="designs-root"
>
  <!---->
   
  <!---->
   
  <div
    class="gl-bg-gray-10 gl-border gl-border-t-0 gl-rounded-bottom-left-base gl-rounded-bottom-right-base gl-px-5"
  >
    <gl-alert-stub
      dismisslabel="Dismiss"
      primarybuttonlink=""
      primarybuttontext=""
      secondarybuttonlink=""
      secondarybuttontext=""
      showicon="true"
      title=""
      variant="danger"
    >
      
      An error occurred while loading designs. Please try again.
    
    </gl-alert-stub>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders loading icon 1`] = `
<div
  class="gl-mt-4"
  data-testid="designs-root"
>
  <!---->
   
  <!---->
   
  <div
    class="gl-bg-gray-10 gl-border gl-border-t-0 gl-rounded-bottom-left-base gl-rounded-bottom-right-base gl-px-5"
  >
    <gl-loading-icon-stub
      color="dark"
      label="Loading"
      size="lg"
    />
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;
